samples/_failures_safe/1761148762_aa2538_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55508cd7.c: In function ‘print_token’:
./samples/SAFE/__tmp_55508cd7.c:186:5: error: expected declaration or statement at end of input
  186 |     };
      |     ^
